--- a/src/output.css
+++ b/src/output.css
@@ -521,9 +521,6 @@
   }
 }
 @layer utilities {
-  .collapse {
-    visibility: collapse;
-  }
   .absolute {
     position: absolute;
   }
@@ -539,9 +536,6 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
-  .top-1 {
-    top: calc(var(--spacing) * 1);
-  }
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
@@ -553,9 +547,6 @@
   }
   .left-12 {
     left: calc(var(--spacing) * 12);
-  }
-  .z-5 {
-    z-index: 5;
   }
   .z-50 {
     z-index: 50;
@@ -583,9 +574,6 @@
   }
   .mx-auto {
     margin-inline: auto;
-  }
-  .mt-0 {
-    margin-top: calc(var(--spacing) * 0);
   }
   .mt-0\.5 {
     margin-top: calc(var(--spacing) * 0.5);
@@ -653,14 +641,8 @@
   .ml-4 {
     margin-left: calc(var(--spacing) * 4);
   }
-  .ml-12 {
-    margin-left: calc(var(--spacing) * 12);
-  }
   .box-border {
     box-sizing: border-box;
-  }
-  .block {
-    display: block;
   }
   .flex {
     display: flex;
@@ -677,36 +659,12 @@
   .inline-flex {
     display: inline-flex;
   }
-  .list-item {
-    display: list-item;
-  }
-  .table {
-    display: table;
-  }
   .size-full {
     width: 100%;
     height: 100%;
   }
-  .h-1 {
-    height: calc(var(--spacing) * 1);
-  }
-  .h-1\/3 {
-    height: calc(1/3 * 100%);
-  }
   .h-1\/4 {
     height: calc(1/4 * 100%);
-  }
-  .h-2 {
-    height: calc(var(--spacing) * 2);
-  }
-  .h-2\/3 {
-    height: calc(2/3 * 100%);
-  }
-  .h-3 {
-    height: calc(var(--spacing) * 3);
-  }
-  .h-3\/2 {
-    height: calc(3/2 * 100%);
   }
   .h-4 {
     height: calc(var(--spacing) * 4);
@@ -723,6 +681,9 @@
   .h-12 {
     height: calc(var(--spacing) * 12);
   }
+  .h-\[3px\] {
+    height: 3px;
+  }
   .h-\[22px\] {
     height: 22px;
   }
@@ -731,9 +692,6 @@
   }
   .h-\[2rem\] {
     height: 2rem;
-  }
-  .h-\[3px\] {
-    height: 3px;
   }
   .h-\[60px\] {
     height: 60px;
@@ -765,20 +723,20 @@
   .w-\[22px\] {
     width: 22px;
   }
-  .w-\[24px\] {
-    width: 24px;
-  }
-  .w-\[70px\] {
-    width: 70px;
-  }
   .w-\[100\%\] {
     width: 100%;
   }
   .w-\[10rem\] {
     width: 10rem;
   }
+  .w-\[24px\] {
+    width: 24px;
+  }
   .w-\[60px\] {
     width: 60px;
+  }
+  .w-\[70px\] {
+    width: 70px;
   }
   .w-auto {
     width: auto;
@@ -788,9 +746,6 @@
   }
   .w-full {
     width: 100%;
-  }
-  .max-w-2xl {
-    max-width: var(--container-2xl);
   }
   .max-w-3xl {
     max-width: var(--container-3xl);
@@ -804,8 +759,8 @@
   .max-w-\[979px\] {
     max-width: 979px;
   }
-  .max-w-\[1190px\] {
-    max-width: 1190px;
+  .max-w-\[1290px\] {
+    max-width: 1290px;
   }
   .max-w-full {
     max-width: 100%;
@@ -819,13 +774,6 @@
   .flex-1 {
     flex: 1;
   }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .-translate-y-1 {
-    --tw-translate-y: calc(var(--spacing) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .-translate-y-1\/2 {
     --tw-translate-y: calc(calc(1/2 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
@@ -835,9 +783,6 @@
   }
   .cursor-pointer {
     cursor: pointer;
-  }
-  .resize {
-    resize: both;
   }
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -899,18 +844,14 @@
   .gap-16 {
     gap: calc(var(--spacing) * 16);
   }
+  .gap-32 {
+    gap: calc(var(--spacing) * 32);
+  }
   .gap-\[2px\] {
     gap: 2px;
   }
   .gap-x-6 {
     column-gap: calc(var(--spacing) * 6);
-  }
-  .space-y-1 {
-    :where(& > :not(:last-child)) {
-      --tw-space-y-reverse: 0;
-      margin-block-start: calc(calc(var(--spacing) * 1) * var(--tw-space-y-reverse));
-      margin-block-end: calc(calc(var(--spacing) * 1) * calc(1 - var(--tw-space-y-reverse)));
-    }
   }
   .space-y-2 {
     :where(& > :not(:last-child)) {
@@ -945,20 +886,6 @@
       --tw-space-y-reverse: 0;
       margin-block-start: calc(calc(var(--spacing) * 16) * var(--tw-space-y-reverse));
       margin-block-end: calc(calc(var(--spacing) * 16) * calc(1 - var(--tw-space-y-reverse)));
-    }
-  }
-  .space-y-18 {
-    :where(& > :not(:last-child)) {
-      --tw-space-y-reverse: 0;
-      margin-block-start: calc(calc(var(--spacing) * 18) * var(--tw-space-y-reverse));
-      margin-block-end: calc(calc(var(--spacing) * 18) * calc(1 - var(--tw-space-y-reverse)));
-    }
-  }
-  .space-y-20 {
-    :where(& > :not(:last-child)) {
-      --tw-space-y-reverse: 0;
-      margin-block-start: calc(calc(var(--spacing) * 20) * var(--tw-space-y-reverse));
-      margin-block-end: calc(calc(var(--spacing) * 20) * calc(1 - var(--tw-space-y-reverse)));
     }
   }
   .gap-y-14 {
@@ -1069,9 +996,6 @@
   .border-black {
     border-color: var(--color-black);
   }
-  .border-gray-300 {
-    border-color: var(--color-gray-300);
-  }
   .bg-\[\#D9F2F7\] {
     background-color: #D9F2F7;
   }
@@ -1114,15 +1038,6 @@
   .bg-black {
     background-color: var(--color-black);
   }
-  .bg-gray-50 {
-    background-color: var(--color-gray-50);
-  }
-  .bg-gray-100 {
-    background-color: var(--color-gray-100);
-  }
-  .bg-gray-300 {
-    background-color: var(--color-gray-300);
-  }
   .bg-white {
     background-color: var(--color-white);
   }
@@ -1156,12 +1071,6 @@
   .p-11 {
     padding: calc(var(--spacing) * 11);
   }
-  .p-12 {
-    padding: calc(var(--spacing) * 12);
-  }
-  .p-42 {
-    padding: calc(var(--spacing) * 42);
-  }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
@@ -1191,9 +1100,6 @@
   }
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
-  }
-  .py-6 {
-    padding-block: calc(var(--spacing) * 6);
   }
   .py-6\.5 {
     padding-block: calc(var(--spacing) * 6.5);
@@ -1227,9 +1133,6 @@
   }
   .text-center {
     text-align: center;
-  }
-  .text-left {
-    text-align: left;
   }
   .text-start {
     text-align: start;
@@ -1347,12 +1250,6 @@
   .text-\[\#1F1F1F\] {
     color: #1F1F1F;
   }
-  .text-\[\#2E2F3566\] {
-    color: #2E2F3566;
-  }
-  .text-\[\#2E2F35\] {
-    color: #2E2F35;
-  }
   .text-\[\#8C8C8C\] {
     color: #8C8C8C;
   }
@@ -1362,8 +1259,11 @@
   .text-\[\#58595D\] {
     color: #58595D;
   }
-  .text-\[\#545454\] {
-    color: #545454;
+  .text-\[\#222222\] {
+    color: #222222;
+  }
+  .text-\[\#2E2F35\] {
+    color: #2E2F35;
   }
   .text-\[\#00938766\] {
     color: #00938766;
@@ -1374,14 +1274,20 @@
   .text-\[\#0F2137\] {
     color: #0F2137;
   }
-  .text-\[\#222222\] {
-    color: #222222;
+  .text-\[\#2E2F3566\] {
+    color: #2E2F3566;
   }
   .text-\[\#313131\] {
     color: #313131;
   }
+  .text-\[\#545454\] {
+    color: #545454;
+  }
   .text-\[\#808080\] {
     color: #808080;
+  }
+  .text-\[\#FF0000\] {
+    color: #FF0000;
   }
   .text-\[\#FFFFFFB2\] {
     color: #FFFFFFB2;
@@ -1410,9 +1316,6 @@
   .uppercase {
     text-transform: uppercase;
   }
-  .underline {
-    text-decoration-line: underline;
-  }
   .accent-\[\#FF6D2C\] {
     accent-color: #FF6D2C;
   }
@@ -1428,17 +1331,6 @@
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
-  }
-  .filter {
-    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
-  }
-  .backdrop-filter {
-    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-  }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
@@ -1452,6 +1344,10 @@
   .duration-300 {
     --tw-duration: 300ms;
     transition-duration: 300ms;
+  }
+  .duration-500 {
+    --tw-duration: 500ms;
+    transition-duration: 500ms;
   }
   .duration-700 {
     --tw-duration: 700ms;
@@ -1492,14 +1388,6 @@
       }
     }
   }
-  .hover\:shadow-sm {
-    &:hover {
-      @media (hover: hover) {
-        --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-      }
-    }
-  }
   .hover\:shadow-\[\#009387\] {
     &:hover {
       @media (hover: hover) {
@@ -1514,31 +1402,10 @@
       }
     }
   }
-  .hover\:shadow-blue-500\/50 {
+  .hover\:shadow-\[\#ffa5a5de\] {
     &:hover {
       @media (hover: hover) {
-        --tw-shadow-color: color-mix(in oklab, var(--color-blue-500) 50%, transparent);
-      }
-    }
-  }
-  .hover\:shadow-gray-500 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-shadow-color: var(--color-gray-500);
-      }
-    }
-  }
-  .hover\:shadow-green-500\/50 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-shadow-color: color-mix(in oklab, var(--color-green-500) 50%, transparent);
-      }
-    }
-  }
-  .hover\:shadow-purple-500\/50 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-shadow-color: color-mix(in oklab, var(--color-purple-500) 50%, transparent);
+        --tw-shadow-color: #ffa5a5de;
       }
     }
   }
@@ -1603,26 +1470,6 @@
       padding-left: calc(var(--spacing) * 22);
     }
   }
-  .md\:m-12 {
-    @media (width >= 48rem) {
-      margin: calc(var(--spacing) * 12);
-    }
-  }
-  .md\:mx-10 {
-    @media (width >= 48rem) {
-      margin-inline: calc(var(--spacing) * 10);
-    }
-  }
-  .md\:mx-12 {
-    @media (width >= 48rem) {
-      margin-inline: calc(var(--spacing) * 12);
-    }
-  }
-  .md\:my-10 {
-    @media (width >= 48rem) {
-      margin-block: calc(var(--spacing) * 10);
-    }
-  }
   .md\:mt-0 {
     @media (width >= 48rem) {
       margin-top: calc(var(--spacing) * 0);
@@ -1638,19 +1485,14 @@
       margin-top: calc(var(--spacing) * 6);
     }
   }
-  .md\:mt-8 {
-    @media (width >= 48rem) {
-      margin-top: calc(var(--spacing) * 8);
-    }
-  }
-  .md\:mt-12 {
-    @media (width >= 48rem) {
-      margin-top: calc(var(--spacing) * 12);
-    }
-  }
   .md\:mt-18 {
     @media (width >= 48rem) {
       margin-top: calc(var(--spacing) * 18);
+    }
+  }
+  .md\:mr-10 {
+    @media (width >= 48rem) {
+      margin-right: calc(var(--spacing) * 10);
     }
   }
   .md\:mr-12 {
@@ -1658,14 +1500,14 @@
       margin-right: calc(var(--spacing) * 12);
     }
   }
+  .md\:mr-16 {
+    @media (width >= 48rem) {
+      margin-right: calc(var(--spacing) * 16);
+    }
+  }
   .md\:mb-2 {
     @media (width >= 48rem) {
       margin-bottom: calc(var(--spacing) * 2);
-    }
-  }
-  .md\:mb-3 {
-    @media (width >= 48rem) {
-      margin-bottom: calc(var(--spacing) * 3);
     }
   }
   .md\:mb-4 {
@@ -1683,11 +1525,6 @@
       margin-bottom: calc(var(--spacing) * 8);
     }
   }
-  .md\:ml-1 {
-    @media (width >= 48rem) {
-      margin-left: calc(var(--spacing) * 1);
-    }
-  }
   .md\:ml-2 {
     @media (width >= 48rem) {
       margin-left: calc(var(--spacing) * 2);
@@ -1698,24 +1535,9 @@
       margin-left: calc(var(--spacing) * 3);
     }
   }
-  .md\:ml-4 {
-    @media (width >= 48rem) {
-      margin-left: calc(var(--spacing) * 4);
-    }
-  }
-  .md\:ml-6 {
-    @media (width >= 48rem) {
-      margin-left: calc(var(--spacing) * 6);
-    }
-  }
   .md\:ml-10 {
     @media (width >= 48rem) {
       margin-left: calc(var(--spacing) * 10);
-    }
-  }
-  .md\:ml-12 {
-    @media (width >= 48rem) {
-      margin-left: calc(var(--spacing) * 12);
     }
   }
   .md\:ml-14 {
@@ -1723,19 +1545,9 @@
       margin-left: calc(var(--spacing) * 14);
     }
   }
-  .md\:ml-16 {
-    @media (width >= 48rem) {
-      margin-left: calc(var(--spacing) * 16);
-    }
-  }
   .md\:ml-18 {
     @media (width >= 48rem) {
       margin-left: calc(var(--spacing) * 18);
-    }
-  }
-  .md\:ml-24 {
-    @media (width >= 48rem) {
-      margin-left: calc(var(--spacing) * 24);
     }
   }
   .md\:block {
@@ -1788,6 +1600,11 @@
       width: calc(1/3 * 100%);
     }
   }
+  .md\:w-\[70px\] {
+    @media (width >= 48rem) {
+      width: 70px;
+    }
+  }
   .md\:w-\[100px\] {
     @media (width >= 48rem) {
       width: 100px;
@@ -1796,11 +1613,6 @@
   .md\:w-\[12\.9rem\] {
     @media (width >= 48rem) {
       width: 12.9rem;
-    }
-  }
-  .md\:w-\[70px\] {
-    @media (width >= 48rem) {
-      width: 70px;
     }
   }
   .md\:w-auto {
@@ -1833,16 +1645,6 @@
       justify-content: space-between;
     }
   }
-  .md\:gap-1 {
-    @media (width >= 48rem) {
-      gap: calc(var(--spacing) * 1);
-    }
-  }
-  .md\:gap-2 {
-    @media (width >= 48rem) {
-      gap: calc(var(--spacing) * 2);
-    }
-  }
   .md\:gap-4 {
     @media (width >= 48rem) {
       gap: calc(var(--spacing) * 4);
@@ -1868,29 +1670,9 @@
       gap: calc(var(--spacing) * 16);
     }
   }
-  .md\:gap-20 {
-    @media (width >= 48rem) {
-      gap: calc(var(--spacing) * 20);
-    }
-  }
   .md\:gap-24 {
     @media (width >= 48rem) {
       gap: calc(var(--spacing) * 24);
-    }
-  }
-  .md\:gap-26 {
-    @media (width >= 48rem) {
-      gap: calc(var(--spacing) * 26);
-    }
-  }
-  .md\:gap-28 {
-    @media (width >= 48rem) {
-      gap: calc(var(--spacing) * 28);
-    }
-  }
-  .md\:gap-32 {
-    @media (width >= 48rem) {
-      gap: calc(var(--spacing) * 32);
     }
   }
   .md\:gap-36 {
@@ -1923,11 +1705,6 @@
         margin-block-start: calc(calc(var(--spacing) * 16) * var(--tw-space-y-reverse));
         margin-block-end: calc(calc(var(--spacing) * 16) * calc(1 - var(--tw-space-y-reverse)));
       }
-    }
-  }
-  .md\:p-2 {
-    @media (width >= 48rem) {
-      padding: calc(var(--spacing) * 2);
     }
   }
   .md\:p-4 {
@@ -2075,11 +1852,6 @@
       font-size: 3.4rem;
     }
   }
-  .md\:text-\[3rem\] {
-    @media (width >= 48rem) {
-      font-size: 3rem;
-    }
-  }
   .md\:text-\[4\.5rem\] {
     @media (width >= 48rem) {
       font-size: 4.5rem;
@@ -2137,12 +1909,6 @@
       line-height: 4rem;
     }
   }
-  .md\:font-medium {
-    @media (width >= 48rem) {
-      --tw-font-weight: var(--font-weight-medium);
-      font-weight: var(--font-weight-medium);
-    }
-  }
   .lg\:top-20 {
     @media (width >= 64rem) {
       top: calc(var(--spacing) * 20);
@@ -2178,21 +1944,6 @@
       margin-left: calc(var(--spacing) * 16);
     }
   }
-  .lg\:ml-18 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 18);
-    }
-  }
-  .lg\:ml-20 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 20);
-    }
-  }
-  .lg\:ml-24 {
-    @media (width >= 64rem) {
-      margin-left: calc(var(--spacing) * 24);
-    }
-  }
   .lg\:ml-auto {
     @media (width >= 64rem) {
       margin-left: auto;
@@ -2216,11 +1967,6 @@
   .lg\:w-1\/3 {
     @media (width >= 64rem) {
       width: calc(1/3 * 100%);
-    }
-  }
-  .lg\:w-\[100px\] {
-    @media (width >= 64rem) {
-      width: 100px;
     }
   }
   .lg\:w-\[13rem\] {
@@ -2294,11 +2040,6 @@
       font-size: 1rem;
     }
   }
-  .lg\:text-\[4rem\] {
-    @media (width >= 64rem) {
-      font-size: 4rem;
-    }
-  }
   .lg\:leading-16 {
     @media (width >= 64rem) {
       --tw-leading: calc(var(--spacing) * 16);
@@ -2316,31 +2057,6 @@
       line-height: 6rem;
     }
   }
-  .dark\:border-gray-700 {
-    @media (prefers-color-scheme: dark) {
-      border-color: var(--color-gray-700);
-    }
-  }
-  .dark\:bg-gray-700 {
-    @media (prefers-color-scheme: dark) {
-      background-color: var(--color-gray-700);
-    }
-  }
-  .dark\:bg-gray-800 {
-    @media (prefers-color-scheme: dark) {
-      background-color: var(--color-gray-800);
-    }
-  }
-  .dark\:bg-gray-900 {
-    @media (prefers-color-scheme: dark) {
-      background-color: var(--color-gray-900);
-    }
-  }
-  .dark\:text-white {
-    @media (prefers-color-scheme: dark) {
-      color: var(--color-white);
-    }
-  }
   .dark\:hover\:shadow-\[\#009387\] {
     @media (prefers-color-scheme: dark) {
       &:hover {
@@ -2355,42 +2071,6 @@
       &:hover {
         @media (hover: hover) {
           --tw-shadow-color: #FF6D2C;
-        }
-      }
-    }
-  }
-  .dark\:hover\:shadow-blue-300\/50 {
-    @media (prefers-color-scheme: dark) {
-      &:hover {
-        @media (hover: hover) {
-          --tw-shadow-color: color-mix(in oklab, var(--color-blue-300) 50%, transparent);
-        }
-      }
-    }
-  }
-  .dark\:hover\:shadow-gray-300 {
-    @media (prefers-color-scheme: dark) {
-      &:hover {
-        @media (hover: hover) {
-          --tw-shadow-color: var(--color-gray-300);
-        }
-      }
-    }
-  }
-  .dark\:hover\:shadow-green-300\/50 {
-    @media (prefers-color-scheme: dark) {
-      &:hover {
-        @media (hover: hover) {
-          --tw-shadow-color: color-mix(in oklab, var(--color-green-300) 50%, transparent);
-        }
-      }
-    }
-  }
-  .dark\:hover\:shadow-purple-300\/50 {
-    @media (prefers-color-scheme: dark) {
-      &:hover {
-        @media (hover: hover) {
-          --tw-shadow-color: color-mix(in oklab, var(--color-purple-300) 50%, transparent);
         }
       }
     }
@@ -2543,83 +2223,6 @@
   syntax: "*";
   inherits: false;
   initial-value: 0 0 #0000;
-}
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
-@property --tw-blur {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-brightness {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-contrast {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-grayscale {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-hue-rotate {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-invert {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-opacity {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-saturate {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-sepia {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-blur {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-brightness {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-contrast {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-grayscale {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-hue-rotate {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-invert {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-opacity {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-saturate {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-sepia {
-  syntax: "*";
-  inherits: false;
 }
 @property --tw-duration {
   syntax: "*";
